increase number of downloaders per node to 3

--- a/misc/supervisor.conf
+++ b/misc/supervisor.conf
@@ -32,9 +32,10 @@ environment=TMP="/srv/tmp",TEMP="/srv/tmp",TMPFILE="/srv/tmp"
 command=/srv/python/venv/bin/python /srv/src/bqueryd/bqueryd/node.py downloader
 directory=/srv/tmp/
 user=ubuntu
-numprocs=1
-stdout_logfile=/var/log/supervisor/bqueryd_downloader.log
-stderr_logfile=/var/log/supervisor/bqueryd_downloader.log
+process_name=%(program_name)s_%(process_num)02d
+numprocs=3
+stdout_logfile=/var/log/supervisor/bqueryd_downloader_%(process_num)02d.log
+stderr_logfile=/var/log/supervisor/bqueryd_downloader_%(process_num)02d.log
 autostart=true
 autorestart=true
 startretries=10
