Split out the movebcolz functionality into a seprate process, 1 per node to prevent race conditions
Locking via Redis for the combined case just was not working properly.

--- a/misc/supervisor.conf
+++ b/misc/supervisor.conf
@@ -41,3 +41,16 @@ autorestart=true
 startretries=10
 startsecs=10
 environment=TMP="/srv/tmp",TEMP="/srv/tmp",TMPFILE="/srv/tmp"
+
+[program:bqueryd_movebcolz]
+command=/srv/python/venv/bin/python /srv/src/bqueryd/bqueryd/node.py movebcolz
+directory=/srv/tmp/
+user=ubuntu
+numprocs=1
+stdout_logfile=/var/log/supervisor/bqueryd_movebcolz.log
+stderr_logfile=/var/log/supervisor/bqueryd_movebcolz.log
+autostart=true
+autorestart=true
+startretries=10
+startsecs=10
+environment=TMP="/srv/tmp",TEMP="/srv/tmp",TMPFILE="/srv/tmp"
