--- a/dockerFile
+++ b/dockerFile
@@ -11,5 +11,6 @@ RUN wget -q https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2016-01.c
 COPY . /srv/src/bqueryd/
 WORKDIR /srv/src/bqueryd/
 RUN pip install -e .[test]
-CMD ["python"]
+# Keep the container running
+CMD sleep infinity
 
