Fixing release job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,9 +54,12 @@ jobs:
 
 workflows:
   version: 2
-  build-and-test:
+  build-and-release:
     jobs:
       - build
+          filters:
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
       # Release only when are going to put a new tag
       - pypi_release:
           requires:
@@ -64,5 +67,3 @@ workflows:
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
