--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,3 +69,5 @@ workflows:
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
