--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ bquery>=0.2.10
 pyzmq>=17.1.2
 redis>=3.0.1
 boto3>=1.9.82
-smart_open>=1.9.0
+smart_open==1.10.1; python_version <= '2.7'
+smart_open>=1.11.1; python_version >= '3.6'
 netifaces>=0.10.9
 configobj>=5.0.6
 psutil>=5.0.0
@@ -10,4 +11,4 @@ pandas>=0.23.1
 pytest>=4.0.0
 pytest-cov>=2.6.0
 codacy-coverage>=1.3.7
-azure-storage-blob==12.0.0
+azure-storage-blob~=12.3.2
